testing/tests/ui/ref_deref.stderr
error: the previous template error derives from
 --> tests/ui/ref_deref.rs:4:12
  |
4 | #[template(source = "{% let *x = 2 %}", ext = "html")]
  |            ^^^^^^
